# pearl

./: .gitmodules  CMakeLists.txt  README.md  bitbucket-pipelines.yml  sonar-project.properties
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml
PearlLib/: PearlLib.pro
PearlLib/PearlLib/: PearlLib.pro  config.h  json_config.h  pearl_activation.c  pearl_activation.h  pearl_activation_function.c  pearl_activation_function.h  pearl_global.h  pearl_graph.c  pearl_graph.h  pearl_json.c  pearl_json.h  pearl_layer.c  pearl_layer.h  pearl_loss.c  pearl_loss.h  pearl_matrix.c  pearl_matrix.h  pearl_network.c  pearl_network.h  pearl_optimiser.h  pearl_print.c  pearl_print.h  pearl_tensor.c  pearl_tensor.h  pearl_util.c  pearl_util.h  pearl_vector.c  pearl_vector.h  pearl_version.c  pearl_version.h
PearlLib/PearlLibConsole/: PearlLibConsole.pro  main.c
PearlLib/PearlLibTest/: PearlLibTest.pro  main.c  tst_pearllib_network.cpp  tst_pearllibtesttest.cpp
example/: main.c
src/: pearl_activation.h  pearl_global.h  pearl_json.c  pearl_json.h  pearl_layer.c  pearl_layer.h  pearl_loss.h  pearl_network.c  pearl_network.h  pearl_optimiser.h  pearl_print.h  pearl_tensor.c  pearl_tensor.h  pearl_util.h
test/: main.c
